--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     </build>
     <properties>
         <spring-version>4.1.7.RELEASE</spring-version>
+        <java-version>1.8</java-version>
     </properties>
 
     <dependencies>
@@ -229,4 +230,17 @@
             <version>1.1.2</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
